--- a/layouts/default.html
+++ b/layouts/default.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Musings of Life, Software and more.. - <%= @item[:title] %></title>
+    <title>Jason Ng PT: <%= @item[:title] %></title>
     <link rel="stylesheet" href="/css/style.css">
+	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400' rel='stylesheet' type='text/css'>
 
     <!-- you don't need to keep this, but it's cool for stats! -->
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>"> 
@@ -14,12 +15,12 @@
     </div>
     <div id="sidebar">
 	  <a href="/"><img src="http://www.gravatar.com/avatar/31b62920aada78f6d8abead9e347b42e.png" border="1" /></a>
-	  <p>
-	  Hello, Jason here.
-	  </p>
+	  <p><a href="/">jason ng pt</a></p>
       <ul>
-        <li><a href="/about">About</a></li>
-        <li><a href="https://github.com/jasonngpt">Github</a></li>
+        <li><a href="/about">about</a></li>
+        <li><a href="https://github.com/jasonngpt">github</a></li>
+        <li><a href="https://twitter.com/jasonngpt">twitter</a></li>
+        <li><a href="mailto:me@jasonngpt.com">email</a></li>
       </ul>
     </div>
   </body>
