--- a/content/css/stylesheet.css
+++ b/content/css/stylesheet.css
@@ -28,7 +28,7 @@ a:hover {
   top: 40px;
   left: 280px;
 
-  width: 500px;
+  width: 600px;
 }
 
 #main h1 {
@@ -81,7 +81,7 @@ a:hover {
 
   font-size: 13px;
 
-  color: #333;
+  color: #000;
 
   letter-spacing: 1px;
 
@@ -89,7 +89,7 @@ a:hover {
 }
 
 #sidebar p {
-  font-size: 13px;
+  font-size: 16px;
 }
 
 #sidebar ul {
@@ -100,6 +100,28 @@ a:hover {
 
 #sidebar li {
   font-size: 14px;
+  font-family: 'Roboto Condensed', sans-serif;
 
   line-height: 20px;
+}
+
+#sidebar img {
+	border-style: none;
+}
+
+.content {
+	width: 800px;
+	background: #f5f5f5;
+	border: 1px solid #ddd;
+	border-top: none;
+	margin: 0 auto;
+	padding: 60px 20px 0 60px;
+}
+.post aside {
+	color: #888;
+	padding-bottom: 8px;
+	border-bottom: 1px solid #aaa;
+}
+.post article {
+	margin: 10px 0 60px 0;
 }
