added listing of blog articles

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -18,6 +18,7 @@
 	  <p><a href="/">jason ng pt</a></p>
       <ul>
         <li><a href="/about">about</a></li>
+        <li><a href="/list">blog</a></li>
         <li><a href="https://github.com/jasonngpt">github</a></li>
         <li><a href="https://twitter.com/jasonngpt">twitter</a></li>
         <li><a href="mailto:me@jasonngpt.com">email</a></li>
