--- a/content/css/stylesheet.css
+++ b/content/css/stylesheet.css
@@ -100,7 +100,7 @@ a:hover {
 
 #sidebar li {
   font-size: 14px;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 
   line-height: 20px;
 }
@@ -119,7 +119,7 @@ a:hover {
 }
 
 .post h1 {
-	font-family: 'Roboto Slab', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 14px;
 }
 
@@ -127,12 +127,12 @@ a:hover {
 	color: #888;
 	padding-bottom: 8px;
 	border-bottom: 1px solid #aaa;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 10px;
 }
 
 .post article {
 	margin: 10px 0 60px 0;
 	font-size: 12px;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 }
