added projects page

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -19,6 +19,7 @@
       <ul>
         <li><a href="/about">about</a></li>
         <li><a href="/list">blog</a></li>
+        <li><a href="/projects">projects</a></li>
         <li><a href="https://github.com/jasonngpt">github</a></li>
         <li><a href="https://twitter.com/jasonngpt">twitter</a></li>
         <li><a href="mailto:me@jasonngpt.com">email</a></li>
