--- a/layouts/default.html
+++ b/layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Jason Ng PT: <%= @item[:title] %></title>
+    <title>jason ng pt: <%= @item[:title] %></title>
     <link rel="stylesheet" href="/css/style.css">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>
 
