--- a/layouts/default.html
+++ b/layouts/default.html
@@ -23,7 +23,7 @@
         <li><a href="https://github.com/jasonngpt">github</a></li>
         <li><a href="https://twitter.com/jasonngpt">twitter</a></li>
         <li><a href="mailto:me@jasonngpt.com">email</a></li>
-        <li><a href="/feed.xml">feed</a></li>
+        <li><a href="/feed.xml">rss</a></li>
       </ul>
     </div>
 	<script>
